# thunder

./: .gitignore  README.md  pyproject.toml
docs/: alive.md  dreamer.md  sac.md  world_model.md
examples/: agent_examples.py  world_model.py
examples/torch/: async_logger.py  world_model.py  zero_agent.py
tests/: test_mamba.py
tests/core/: test_jax_backend.py  test_torch_backend.py
tests/env/: test_isaaclab_loader.py  test_loader.py
tests/nn/: test_mamba.py
tests/rl/: test_torch_buffer.py  test_torch_sigreg.py  test_torch_utils.py
tests/torch/: test_mamba.py
thunder/: README.md
thunder/algorithms/: __init__.py  algorithm.py
thunder/algorithms/cppo/: __init__.py  buffer.py  cppo.py
thunder/algorithms/extensions/: __init__.py  advantage_mix_buffer.py  advantage_mix_ppo.py  denoise_ppo.py  denoise_ppo_buffer.py  ggf_buffer.py  ggf_ppo.py  ppo_buffer_x.py  ppo_x.py  roa_ppo.py  roa_ppo_buffer.py
thunder/algorithms/ppo/: buffer.py  ppo.py
thunder/algorithms/sac/: buffer.py  sac.py
thunder/algorithms/td_mpc/: __init__.py  buffer.py  td_mpc.py
thunder/core/: __init__.py  algorithm.py  context.py  data.py  operation.py
thunder/core/executor/: __init__.py  _jax_impl.py  _torch_impl.py  _warp_impl.py  executor.py  interface.py
thunder/core/module/: __init__.py  _jax_impl.py  _torch_impl.py  _warp_impl.py  interface.py  module.py
thunder/env/: __init__.py  dmc.py  gymnasium.py  interface.py  isaaclab.py  loader.py  maniskill.py  mjlab.py  ray_lab.py  typing.py
thunder/models/: __init__.py  belief.py  dynamic.py  general.py  rbf.py  world_model.py
thunder/nn/: distributions.py  functional.py  mapping.py
thunder/nn/models/: belief.py  dynamic.py
thunder/nn/modules/: __init__.py  activation.py  attention.py  conv_blocks.py  linear_blocks.py  mamba.py  normalization.py  rnn_blocks.py  transformer.py
thunder/nn/ops/: __init__.py
thunder/nn/torch/: __init__.py  distributions.py  functional.py
thunder/nn/utils/: __init__.py  initialization.py
thunder/ops/: selective_scan.py  ssd.py
thunder/rl/: __init__.py  actor.py  buffer.py  critic.py  models.py  script_modules.py  types.py
thunder/rl/algos/: agent.py  algos.py  alive.py  ppo.py
thunder/rl/buffer/: torch.py
thunder/rl/distributions/: README.md  distribution.py
thunder/rl/func/: torch.py
thunder/rl/models/: protocol.py
thunder/rl/torch/: __init__.py  actor.py  agent.py  buffer.py  critic.py  functional.py  operations.py  utils.py
thunder/rl/utils/: __init__.py  (+3 more)
thunder/utils/: __init__.py  agent_factory.py  arguments.py  model_factory.py  setup_agents.py  utilities.py
(+26 files in other folders)
