[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thunder"
version = "0.0.0"
authors = [{ name = "ecstayalive", email = "ecstayalive@163.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "numpy",
    "gymnasium",
    "wandb",
    "tqdm",
    "rich",
    "rich_argparse",
    "pytest",
    "tyro",
]


[project.urls]
"Homepage" = "https://github.com/ecstayalive/thunder"
"Bug Tracker" = "https://github.com/ecstayalive/thunder/issues"

[project.scripts]

[project.optional-dependencies]
torch = ["torch>=2.0.0", "mamba-ssm"]
jax = ["jax[cuda12]>=0.4.0", "flax", "optax"]
warp = ["warp-lang"]
all = ["thunder[torch,jax,warp]"]
