[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thunder"
version = "0.0.0"
authors = [{ name = "ecstayalive", email = "ecstayalive@163.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["tqdm", "rich", "rich_argparse", "coolname"]

[tool.setuptools]
packages = ["thunder"]


[project.urls]
"Homepage" = "https://github.com/ecstayalive/thunder"
"Bug Tracker" = "https://github.com/ecstayalive/thunder/issues"
"Discussions" = "https://github.com/ecstayalive/thunder/discussions"

[project.scripts]

[project.optional-dependencies]
torch = ["torch<=2.10", "mamba-ssm<=2.3.1"]
jax = ["jax[cuda12]<=0.6", "flax<=0.11", "optax<=0.3"]
warp = ["warp-lang"]
all = ["thunder[torch,jax,warp]"]
